--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "start": "npm run build && electron ./dist/main.js"
+    "start": "tsx src/main.ts"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +22,6 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^20.2.5",
-    "electron": "^25.0.0",
     "eslint": "^8.41.0",
     "tsx": "^3.12.7",
     "typescript": "^5.0.4"
