--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "main.ts",
   "scripts": {
-    "dev:bot": "tsx src/index.ts",
     "build": "tsc",
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
+    "start:conversor": "tsx src/utils/MdToHtml.ts",
     "start": "tsx src/main.ts"
   },
   "keywords": [],
@@ -15,7 +15,9 @@
   "license": "Apache License 2.0",
   "dependencies": {
     "@sendinblue/client": "^3.3.1",
+    "@types/markdown-it": "^13.0.0",
     "dotenv": "^16.0.3",
+    "markdown-it": "^13.0.1",
     "puppeteer": "^20.2.1",
     "sib-api-v3-sdk": "^8.5.0"
   },
